--- a/index.html
+++ b/index.html
@@ -51,7 +51,20 @@
 
           <h2>JavaScript</h2>
           <ul>
-            <li>Enter your JavaScript notes here</li>
+            <li>JavaScript is case sensitive.</li>
+            <li>A variable is a named container that allows us to store data in our code.</li>
+            <li>Control flow is the order in which a computer executes code in a script.</li>
+            <li>We can use conditional statements and loops to control the oerder in which code is executed or if it's executed at all.</li>
+            <li>An array is a single variable that is used to hold a group of data.</li>
+            <li>An array index allows us to work with individual items inside an array.</li>
+            <li>Arrays are zero-indexed and sequential.</li>
+            <li>A "for" loop uses the predictable pattern of indices to perform a task on all items in an array by allowing a single code block to be executed over and over.</li>
+            <li>A "for" loop contains the following three important statements, the starting point for our loop, the condition, and the final statement.</li>
+            <li>A function is a set of instructions that tells the computer how to perform a certain task.</li>
+            <li>A function's name is followed by parentheses().</li>
+            <li>Declaring a function in our JavaScript file does not mean that the code will automatically execute.
+              We need to call the function in the code at the spot we want it to execute.
+            </li>
           </ul>
 
         </section>
